<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constrainedHeight="true"
    app:layout_constraintHeight_default="percent"
    app:layout_constraintHeight_percent=".05"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_give_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/give_up"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintStart_toEndOf="@+id/button_start"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="16dp"
        android:text="@string/start"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_give_up"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/button_letter_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:text="@string/placeholder"
        android:textSize="36sp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/button_letter_two"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".20" />

    <Button
        android:id="@+id/button_letter_two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:text="@string/placeholder"
        android:textSize="36sp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/button_letter_three"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".12"
        app:layout_constraintStart_toEndOf="@+id/button_letter_one"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".20" />

    <Button
        android:id="@+id/button_letter_four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/placeholder"
        android:textSize="36sp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".12"
        app:layout_constraintStart_toEndOf="@+id/button_letter_three"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".20" />

    <Button
        android:id="@+id/button_letter_three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:text="@string/placeholder"
        android:textSize="36sp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/button_letter_four"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".12"
        app:layout_constraintStart_toEndOf="@+id/button_letter_two"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".20" />

    <Button
        android:id="@+id/button_check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/check"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintStart_toEndOf="@+id/editText_guess"
        app:layout_constraintTop_toBottomOf="@+id/button_letter_four"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/letter"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editText_guess"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_letter_one" />

    <EditText
        android:id="@+id/editText_guess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/button_check"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/button_letter_two"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_message"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="130dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_letter_two" />

</androidx.constraintlayout.widget.ConstraintLayout>